--- a/README.Rmd
+++ b/README.Rmd
@@ -28,7 +28,7 @@ In addition, **hybriddetective** includes plotting functionality to generate bot
 
 **Function name** | **Synopsis** | **Main use**  
 ------------|------------------------------------------|------------------------------------------------------------------
-**getTopLoc.R**  | Creates a panel comprised of the top *n* unlinked loci. Exports a list of loci, and a dataset to be used in the simulation functions in [parallelnewhybrid](https://github.com/bwringe/parallelnewhybrid), or another program.| [_Data Preparation_](#gettoploc)
+**getTopLoc.R**  | Creates a panel comprised of the top *n* loci not in linkage disequilbrium. Exports a list of loci, and a dataset to be used in the simulation functions in [parallelnewhybrid](https://github.com/bwringe/parallelnewhybrid), or another program.| [_Data Preparation_](#gettoploc)
 **freqbasedsim_GTFreq.R**  | Creates simulated hybrid datasets comprised of *two pure parental groups*, *F1*, *F2*, and *backcrosses to both ancestral groups*. Samples based solely on allele frequencies in the provided populations. Alleles are sampled without replacement from the two populations. Allows the number of individuals of each genotype frequency category output to be specified by the user.| [_Data Preparation_](#freqbasedADV)
 **freqbasedsim_AlleleSample.R**  | Creates simulated hybrid datasets comprised of *two pure parental groups*, *F1*, *F2*, and *backcrosses to both ancestral groups*. Samples by taking one allele at each locus from each of the two parental populations in each generation. Alleles are sampled without replacement from the two populations.. Also allows the number of individuals of each genotype frequency category output to be specified by the user.| [_Data Preparation_](#freqbasedUB2)
 **nh_analysis_generateR.R** |   Merges specified simulated reference datasets with the genotypes of unknown/experimental individuals, producing a file to be analyzed by [NewHybrids](https://github.com/eriqande/newhybrids) | [_Data Preparation_](#nhdatageneratR)
